--- a/package.json
+++ b/package.json
@@ -20,13 +20,20 @@
   "homepage": "https://github.com/GustavoDe/control_system_api#readme",
   "dependencies": {
     "@prisma/client": "^4.12.0",
+    "@types/redis": "^4.0.11",
     "bcrypt": "^5.1.0",
+    "ioredis": "^5.3.1",
+    "jsonwebtoken": "^9.0.0",
     "prisma": "^4.12.0",
+    "redis": "^4.6.5",
     "typescript": "^5.0.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/ioredis": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
     "eslint": "^8.37.0",
